added menu simple bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <mat-card>
     <button #btn>Disconnect</button> 
     
-      <div [appEditor]="[btn,editorContainer]">
+      <div appEditor>
       </div>
     
   </mat-card>
