--- a/src/app/my-element/my-element.component.html
+++ b/src/app/my-element/my-element.component.html
@@ -1,9 +1,8 @@
-<div class="app" #editorContainer>
-  <mat-card>
+<div class="app" #editorContainer >
+  <mat-card #matCard >
     <button #btn1 (click)="btn(btn1)">Disconnect</button> 
     
-      <div >
-      </div>
+      
     
   </mat-card>
 </div>
