implemented prosemirror comments btns

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,3 +9,5 @@
     <div #commentsContainer>{{comments}}</div>
   </mat-card>
 <!-- <app-my-element></app-my-element> -->
+
+<!-- <app-prosemirror2></app-prosemirror2> -->
